--- a/index.html
+++ b/index.html
@@ -5,8 +5,133 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Базовый HTML и CSS</a>».</p>
-
+    <div class="container">
+    <header class="main-header">
+      <figure class="to-index">
+        <a href="#">
+          <img src="#" width="138" height="70" alt="Welcome to the gorgeous Sedona">
+        </a>
+      </figure>
+        <nav class="main-navigation">
+          <ul>
+            <li>
+              <a href="#">Информация</a>
+            </li>
+            <li>
+              <a href="#">Фото и Видео</a>
+            </li>
+            <li>
+              <a href="#">Карта Штата</a>
+            </li>
+            <li>
+              <a href="hotels.html">Гостиницы</a>
+            </li>
+          </ul>
+        </nav>
+    </header>
+    <div class="index-welcome">
+      <img src="#" class="index-intro-text" width="138" height="70" alt="welcome logo">
+    </div>
+    <h1 class="index-title">Седона - небольшой городок в Аризоне, заслуживающий большего!</h1>
+    <p>Рассмотрим 5 причин, по котороым Седона круче, чем Гранд Каньон!</p>
+    <div class="causes-item grid-img-right">
+      <div class="causes-item-text">
+        <h2>Настоящий
+          <br>
+          городок
+        </h2>
+        <span>—№1—</span>
+        <p>Седона — не атракцион для туристов, там течет своя жизнь</p>
+      </div>
+    </div>
+    <div class="causes-item-pic">
+      <img src="#" width="800" height="400" alt="Настоящий городок">
+    </div>
+    <div class="causes-item white-theme">
+      <div class="causes-item-intro">
+        <h2 class="causes-item-intro-title">
+          Жилье
+        </h2>
+        <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+      </div>
+      <div class="causes-item-intro">
+        <h2 class="causes-item-intro-title">
+          Еда
+        </h2>
+        <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+      </div>
+      <div class="causes-item-into">
+        <h2 class="causes-item-intro-title">
+          Сувениры
+        </h2>
+        <p>Не только китайского, но и местного производства!</p>
+      </div>
+    </div>
+    <div class="causes-item grid-img-left">
+      <div class="causes-item-pic">
+        <img src="#" width="800" height="400" alt="Мост дьявола">
+      </div>
+      <div class="causes-item-text">
+        <h2>Там есть мост дьявола</h2>
+        <span>—№2—</span>
+        <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+      </div>
+    </div>
+    <div class="causes-item gray-theme">
+      <div class="causes-item-gray">
+        <h2>
+          Небольшая
+          <br>
+          площадь
+        </h2>
+        <span>—№3—</span>
+        <p>Все достопримечательности находятся очень близко</p>
+      </div>
+      <div class="causes-item-gray">
+        <h2>
+          Красивая
+          <br>
+          дорога
+        </h2>
+        <span>—№4—</span>
+        <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+      </div>
+      <div class="causes-item-gray">
+        <h2>
+          Мало
+          <br>
+          туристов
+        </h2>
+        <span>—№5—</span>
+        <p>Большинство едет в Гранд Каньон и толпится там</p>
+      </div>
+    </div>
+    <div class="intresting">
+      <h2>Заинтересовались?</h2>
+      <p>
+        Укажите предпологаемы даты поездки,
+        <br>
+        и мы покажем вам лучшие предложения гостиниц в Седоне
+      </p>
+      <a href="#" class="btn-link btn-intresting">Поиск гостиницы в Седоне</a>
+    </div>
+<footer class="main-footer">
+  <!-- Тут будет карта -->
+  <div class="footer-blocks">
+    <div class="footer-hashtag">#visitsedona</div>
+    <div class="footer-social">
+      <a class="footer-social-icon icon-twitter" href="#" title="Twitter">Twi</a>
+      <a class="footer-social-icon icon-facebook" href="#" title="Facebook">FB</a>
+      <a class="footer-social-icon icon-youtube" href="#" title="YouTube">YT</a>
+    </div>
+  </div>
+    <div class="footer-by">
+      Website by
+      <a class="footer-by-icon" href="#"></a>
+      for
+      <a class="footer-for-icon" href=""></a>
+  </div>
+</footer>
+</div>
   </body>
 </html>
