Подготовка графики и текстовых стилей  "Седона"

--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
+    <title>Sedona - Главная</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <div class="container">
     <header class="main-header">
       <figure class="to-index">
         <a href="#">
-          <img src="#" width="138" height="70" alt="Welcome to the gorgeous Sedona">
+          <img src="img/to-index.png" width="138" height="70" alt="Welcome to the gorgeous Sedona">
         </a>
       </figure>
         <nav class="main-navigation">
@@ -30,7 +31,9 @@
         </nav>
     </header>
     <div class="index-welcome">
-      <img src="#" class="index-intro-text" width="138" height="70" alt="welcome logo">
+      <img src="img/bg-index.jpg" class="bg-index" width="1200" height="773">
+      <img src="img/index-title.png" class="index-intro-text" width="458" height="352">
+      <img src="img/index-mask.png" class="index-mask" width="1200" height="57">
     </div>
     <h1 class="index-title">Седона - небольшой городок в Аризоне, заслуживающий большего!</h1>
     <p>Рассмотрим 5 причин, по котороым Седона круче, чем Гранд Каньон!</p>
@@ -45,7 +48,7 @@
       </div>
     </div>
     <div class="causes-item-pic">
-      <img src="#" width="800" height="400" alt="Настоящий городок">
+      <img src="img/causes-item-pic-right.jpg" width="800" height="256" alt="Настоящий городок">
     </div>
     <div class="causes-item white-theme">
       <div class="causes-item-intro">
@@ -69,7 +72,7 @@
     </div>
     <div class="causes-item grid-img-left">
       <div class="causes-item-pic">
-        <img src="#" width="800" height="400" alt="Мост дьявола">
+        <img src="img/causes-item-pic-left.jpg" width="800" height="256" alt="Мост дьявола">
       </div>
       <div class="causes-item-text">
         <h2>Там есть мост дьявола</h2>
@@ -116,7 +119,8 @@
       <a href="#" class="btn-link btn-intresting">Поиск гостиницы в Седоне</a>
     </div>
 <footer class="main-footer">
-  <!-- Тут будет карта -->
+  <!-- Тут будет карта
+-->
   <div class="footer-blocks">
     <div class="footer-hashtag">#visitsedona</div>
     <div class="footer-social">
@@ -129,7 +133,7 @@
       Website by
       <a class="footer-by-icon" href="#"></a>
       for
-      <a class="footer-for-icon" href=""></a>
+      <a class="footer-for-icon" href="#"></a>
   </div>
 </footer>
 </div>
