--- a/hotels.html
+++ b/hotels.html
@@ -2,14 +2,15 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-  <title>HTML Academy: Седона - Гостиницы</title>
+  <title>Sedona - Гостиницы</title>
+  <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
   <div class="container">
     <header class="main-header">
       <figure>
         <a href="index.html">
-          <img src="#" class="to-index" width="138" height="70" alt="На главную">
+          <img src="img/to-index.png" class="to-index" width="138" height="70" alt="На главную">
         </a>
       </figure>
       <nav class="main-navigation">
@@ -30,6 +31,7 @@
       </nav>
     </header>
     <div class="filter">
+       <img src="img/bg-filter.jpg" class="bg-filter" width="1200" height="562">
       <form action="#" method="post">
         <div class="infrastructure">
           <div class="filter-title">
@@ -104,7 +106,7 @@
     </div>
     <div class="hotel-item">
   <div class="hotel-left-block">
-    <img width="135" height="90" alt="alt" src="#">
+    <img src="img/hotel-pic-1.jpg" width="135" height="90" alt="Amara Resort &amp; Spa">
   </div>
   <div class="hotel-middle-block">
     <a class="hotel-item-title" href="#">Amara Resort &amp; Spa</a>
@@ -126,7 +128,7 @@
 </div>
 <div class="hotel-item">
   <div class="hotel-left-block">
-    <img width="135" height="90" alt="alt" src="#">
+    <img src="img/hotel-pic-2.jpg" width="135" height="90" alt="Desert Quail Inn">
   </div>
   <div class="hotel-middle-block">
     <a class="hotel-item-title" href="#">Desert Quail Inn</a>
@@ -148,7 +150,7 @@
 </div>
 <div class="hotel-item">
   <div class="hotel-left-block">
-    <img width="135" height="90" alt="alt" src="#">
+    <img src="img/hotel-pic-3.jpg" width="135" height="90" alt="Villas at Poco Diablo">
   </div>
   <div class="hotel-middle-block">
     <a class="hotel-item-title" href="#">Villas at Poco Diablo</a>
@@ -181,9 +183,9 @@
       Website by
       <a class="footer-by-icon" href="#"></a>
       for
-      <a class="footer-for-icon" href=""></a>
+      <a class="footer-for-icon" href="#"></a>
   </div>
 </footer>
-</div> 
+</div>
 </body>
 </html>
