--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <li>
               <a href="#">Информация</a>
             </li>
-            <li>
+            <li class="menu-indent">
               <a href="#">Фото и Видео</a>
             </li>
             <li>
@@ -31,13 +31,12 @@
         </nav>
     </header>
     <div class="index-welcome">
-      <img src="img/bg-index.jpg" class="bg-index" width="1200" height="773">
       <img src="img/index-title.png" class="index-intro-text" width="458" height="352">
-      <img src="img/index-mask.png" class="index-mask" width="1200" height="57">
     </div>
     <h1 class="index-title">Седона - небольшой городок в Аризоне, заслуживающий большего!</h1>
-    <p>Рассмотрим 5 причин, по котороым Седона круче, чем Гранд Каньон!</p>
-    <div class="causes-item grid-img-right">
+    <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
+    <div class="causes-item grid-img-right clearfix">
+      <div class="column-33">
       <div class="causes-item-text">
         <h2>Настоящий
           <br>
@@ -50,37 +49,47 @@
     <div class="causes-item-pic">
       <img src="img/causes-item-pic-right.jpg" width="800" height="256" alt="Настоящий городок">
     </div>
-    <div class="causes-item white-theme">
+    </div>
+    <div class="causes-item white-theme clearfix">
+    <div class="column-33">
       <div class="causes-item-intro">
-        <h2 class="causes-item-intro-title">
+        <h2 class="causes-item-intro-title left-sprite">
           Жилье
         </h2>
         <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
       </div>
+    </div>
+    <div class="column-33">
       <div class="causes-item-intro">
-        <h2 class="causes-item-intro-title">
+        <h2 class="causes-item-intro-title middle-sprite">
           Еда
         </h2>
         <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
       </div>
-      <div class="causes-item-into">
-        <h2 class="causes-item-intro-title">
+    </div>
+    <div class="column-33">
+      <div class="causes-item-intro">
+        <h2 class="causes-item-intro-title right-sprite">
           Сувениры
         </h2>
         <p>Не только китайского, но и местного производства!</p>
       </div>
     </div>
-    <div class="causes-item grid-img-left">
+    </div>
+    <div class="causes-item grid-img-left clearfix">
       <div class="causes-item-pic">
         <img src="img/causes-item-pic-left.jpg" width="800" height="256" alt="Мост дьявола">
       </div>
+      <div class="column-33">
       <div class="causes-item-text">
         <h2>Там есть мост дьявола</h2>
         <span>—№2—</span>
         <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
       </div>
     </div>
-    <div class="causes-item gray-theme">
+    </div>
+    <div class="causes-item gray-theme clearfix">
+      <div class="column-33">
       <div class="causes-item-gray">
         <h2>
           Небольшая
@@ -90,6 +99,8 @@
         <span>—№3—</span>
         <p>Все достопримечательности находятся очень близко</p>
       </div>
+      </div>
+      <div class="column-33">
       <div class="causes-item-gray">
         <h2>
           Красивая
@@ -99,6 +110,8 @@
         <span>—№4—</span>
         <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
       </div>
+      </div>
+      <div class="column-33">
       <div class="causes-item-gray">
         <h2>
           Мало
@@ -109,7 +122,8 @@
         <p>Большинство едет в Гранд Каньон и толпится там</p>
       </div>
     </div>
-    <div class="intresting">
+    </div>
+    <div class="interesting">
       <h2>Заинтересовались?</h2>
       <p>
         Укажите предпологаемы даты поездки,
@@ -132,8 +146,6 @@
     <div class="footer-by">
       Website by
       <a class="footer-by-icon" href="#"></a>
-      for
-      <a class="footer-for-icon" href="#"></a>
   </div>
 </footer>
 </div>
