--- a/index.html
+++ b/index.html
@@ -1,153 +1,198 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>Sedona - Главная</title>
-    <link href="css/style.css" rel="stylesheet">
-  </head>
-  <body>
-    <div class="container">
+
+<head>
+  <meta charset="utf-8">
+  <title>Sedona - Главная</title>
+  <link href="css/normalize.css" rel="stylesheet" type="text/css">
+  <link href="css/style.css" rel="stylesheet">
+  <link href='https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
+</head>
+
+<body>
+  <div class="container">
     <header class="main-header">
       <figure class="to-index">
         <a href="#">
           <img src="img/to-index.png" width="138" height="70" alt="Welcome to the gorgeous Sedona">
         </a>
       </figure>
-        <nav class="main-navigation">
-          <ul>
-            <li>
-              <a href="#">Информация</a>
-            </li>
-            <li class="menu-indent">
-              <a href="#">Фото и Видео</a>
-            </li>
-            <li>
-              <a href="#">Карта Штата</a>
-            </li>
-            <li>
-              <a href="hotels.html">Гостиницы</a>
-            </li>
-          </ul>
-        </nav>
+      <nav class="main-navigation">
+        <ul>
+          <li>
+            <a href="#">Информация</a>
+          </li>
+          <li class="menu-indent">
+            <a href="#">Фото и Видео</a>
+          </li>
+          <li>
+            <a href="#">Карта Штата</a>
+          </li>
+          <li>
+            <a href="hotels.html">Гостиницы</a>
+          </li>
+        </ul>
+      </nav>
     </header>
     <div class="index-welcome">
-      <img src="img/index-title.png" class="index-intro-text" width="458" height="352">
+      <img src="img/index-title.png" class="index-intro-text" width="458" height="352" alt="alt">
     </div>
     <h1 class="index-title">Седона - небольшой городок в Аризоне, заслуживающий большего!</h1>
     <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
     <div class="causes-item grid-img-right clearfix">
       <div class="column-33">
-      <div class="causes-item-text">
-        <h2>Настоящий
+        <div class="causes-item-text">
+          <h2>Настоящий
           <br>
           городок
         </h2>
-        <span>—№1—</span>
-        <p>Седона — не атракцион для туристов, там течет своя жизнь</p>
+          <span>—№1—</span>
+          <p>Седона — не атракцион для туристов, там течет своя жизнь</p>
+        </div>
       </div>
-    </div>
-    <div class="causes-item-pic">
-      <img src="img/causes-item-pic-right.jpg" width="800" height="256" alt="Настоящий городок">
-    </div>
+      <div class="causes-item-pic">
+        <img src="img/causes-item-pic-right.jpg" width="800" height="256" alt="Настоящий городок">
+      </div>
     </div>
     <div class="causes-item white-theme clearfix">
-    <div class="column-33">
-      <div class="causes-item-intro">
-        <h2 class="causes-item-intro-title left-sprite">
+      <div class="column-33">
+        <div class="causes-item-intro">
+          <h2 class="causes-item-intro-title left-sprite">
           Жилье
         </h2>
-        <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+          <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+        </div>
       </div>
-    </div>
-    <div class="column-33">
-      <div class="causes-item-intro">
-        <h2 class="causes-item-intro-title middle-sprite">
+      <div class="column-33">
+        <div class="causes-item-intro">
+          <h2 class="causes-item-intro-title middle-sprite">
           Еда
         </h2>
-        <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+          <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+        </div>
       </div>
-    </div>
-    <div class="column-33">
-      <div class="causes-item-intro">
-        <h2 class="causes-item-intro-title right-sprite">
+      <div class="column-33">
+        <div class="causes-item-intro">
+          <h2 class="causes-item-intro-title right-sprite">
           Сувениры
         </h2>
-        <p>Не только китайского, но и местного производства!</p>
+          <p>Не только китайского, но и местного производства!</p>
+        </div>
       </div>
-    </div>
     </div>
     <div class="causes-item grid-img-left clearfix">
       <div class="causes-item-pic">
         <img src="img/causes-item-pic-left.jpg" width="800" height="256" alt="Мост дьявола">
       </div>
       <div class="column-33">
-      <div class="causes-item-text">
-        <h2>Там есть мост дьявола</h2>
-        <span>—№2—</span>
-        <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+        <div class="causes-item-text">
+          <h2>Там есть мост дьявола</h2>
+          <span>—№2—</span>
+          <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+        </div>
       </div>
-    </div>
     </div>
     <div class="causes-item gray-theme clearfix">
       <div class="column-33">
-      <div class="causes-item-gray">
-        <h2>
+        <div class="causes-item-gray">
+          <h2>
           Небольшая
           <br>
           площадь
         </h2>
-        <span>—№3—</span>
-        <p>Все достопримечательности находятся очень близко</p>
-      </div>
+          <span>—№3—</span>
+          <p>Все достопримечательности находятся очень близко</p>
+        </div>
       </div>
       <div class="column-33">
-      <div class="causes-item-gray">
-        <h2>
+        <div class="causes-item-gray">
+          <h2>
           Красивая
           <br>
           дорога
         </h2>
-        <span>—№4—</span>
-        <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-      </div>
+          <span>—№4—</span>
+          <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+        </div>
       </div>
       <div class="column-33">
-      <div class="causes-item-gray">
-        <h2>
+        <div class="causes-item-gray">
+          <h2>
           Мало
           <br>
           туристов
         </h2>
-        <span>—№5—</span>
-        <p>Большинство едет в Гранд Каньон и толпится там</p>
+          <span>—№5—</span>
+          <p>Большинство едет в Гранд Каньон и толпится там</p>
+        </div>
       </div>
-    </div>
     </div>
     <div class="interesting">
       <h2>Заинтересовались?</h2>
       <p>
         Укажите предпологаемы даты поездки,
-        <br>
-        и мы покажем вам лучшие предложения гостиниц в Седоне
+        <br> и мы покажем вам лучшие предложения гостиниц в Седоне
       </p>
-      <a href="#" class="btn-link btn-intresting">Поиск гостиницы в Седоне</a>
+      <a href="#" class="btn-link btn-interesting">Поиск гостиницы в Седоне</a>
     </div>
-<footer class="main-footer">
-  <!-- Тут будет карта
--->
-  <div class="footer-blocks">
-    <div class="footer-hashtag">#visitsedona</div>
-    <div class="footer-social">
-      <a class="footer-social-icon icon-twitter" href="#" title="Twitter">Twi</a>
-      <a class="footer-social-icon icon-facebook" href="#" title="Facebook">FB</a>
-      <a class="footer-social-icon icon-youtube" href="#" title="YouTube">YT</a>
-    </div>
+    <footer class="main-footer">
+
+      <!-- Тут будет карта -->
+
+      <div class="index-form index-form-show">
+        <form action="#" method="post">
+          <div class="clearfix">
+            <div class="form-colum-left">
+              <label for="date-beg">Дата заезда:</label>
+            </div>
+            <div class="form-colum-right">
+              <i class="icon-calendar"></i>
+              <input id="date-beg" type="text" name="date-beg" value="" placeholder="24 апреля 2014">
+            </div>
+          </div>
+          <div class="clearfix">
+            <div class="form-colum-left">
+              <label for="date-end">Дата выезда:</label>
+            </div>
+            <div class="form-colum-right">
+              <i class="icon-calendar"></i>
+              <input id="date-end" type="text" name="date-end" value="" placeholder="4 июля 2014">
+            </div>
+          </div>
+          <div class="half-lable-width clearfix">
+            <div class="form-colum-left">
+              <label for="num-grown">Взрослые:</label>
+            </div>
+            <div class="form-colum-right">
+              <div class="form-counter-left">
+                <i class="icon-minus"></i>
+                <input id="num-grown" type="text" name="num-grown" value="2"><i class="icon-plus"></i>
+              </div>
+              <label for="num-children">Дети:</label>
+              <div class="form-counter-right">
+                <i class="icon-minus"></i>
+                <input id="num-children" type="text" name="num-children" value="0"><i class="icon-plus"></i>
+              </div>
+            </div>
+          </div>
+          <button type="submit" class="btn btn-show">Найти</button>
+        </form>
+      </div>
+
+      <div class="footer-blocks">
+        <div class="footer-hashtag">#visitsedona</div>
+        <div class="footer-social">
+          <a class="footer-social-icon icon-twitter" href="#" title="twitter"></a>
+          <a class="footer-social-icon icon-facebook" href="#" title="facebook"></a>
+          <a class="footer-social-icon icon-youtube" href="#" title="youTube"></a>
+        </div>
+      </div>
+      <div class="footer-by">
+        Website by
+        <a class="footer-by-icon" href="#"></a>
+      </div>
+    </footer>
   </div>
-    <div class="footer-by">
-      Website by
-      <a class="footer-by-icon" href="#"></a>
-  </div>
-</footer>
-</div>
-  </body>
+</body>
+
 </html>
