Завершающая верстка "Седона"

--- a/hotels.html
+++ b/hotels.html
@@ -6,7 +6,7 @@
   <title>Sedona - Гостиницы</title>
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/style.css" rel="stylesheet">
-  <link href='https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
@@ -81,7 +81,7 @@
             </label>
             <label>
               до
-              <input class="max-price" type="text" value="3 000">
+              <input class="max-price" type="text" value="3000">
               </label>
           </div>
           <div class="range-controls">
@@ -96,7 +96,7 @@
     </form>
     </div>
     <div class="hotel-list-title clearfix">
-      <div class="found">Найдено:3</div>
+      <div class="found">Найдено: 3</div>
       <div class="sorting">Сортировка:</div>
       <ul>
         <li class="active">По цене</li>
@@ -190,10 +190,10 @@
           <a class="footer-social-icon icon-facebook" href="#" title="facebook"></a>
           <a class="footer-social-icon icon-youtube" href="#" title="youTube"></a>
         </div>
-      </div>
       <div class="footer-by">
         Website by
         <a class="footer-by-icon" href="#"></a>
+      </div>
       </div>
     </footer>
   </div>
