--- a/hotels.html
+++ b/hotels.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Sedona - Гостиницы</title>
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
-  <link href="css/style.css" rel="stylesheet">
+  <link href="css/min.css" rel="stylesheet">
   <link href='https://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 </head>
 
