--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Sedona - Главная</title>
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
-  <link href="css/style.css" rel="stylesheet">
+  <link href="css/min.css" rel="stylesheet">
   <link href='https://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 
 <body>
@@ -137,7 +137,7 @@
     </div>
     <footer class="main-footer">
     <div class="index-map">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d44046.54795493258!2d-111.78006727015365!3d34.861773358044005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1462973811835" width="1200" height="593" frameborder="0" style="border:0" allowfullscreen></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d44046.54795493258!2d-111.78006727015365!3d34.861773358044005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1462973811835" width="1200" height="593" style="border:0" allowfullscreen></iframe>
     </div>
       <div class="index-form index-form">
         <form action="#" method="post">
@@ -192,7 +192,7 @@
       </div>
     </footer>
   </div>
-  <script src="js/main.js"></script>
+  <script src="js/min.js"></script>
 </body>
 
 </html>
