--- a/hotels.html
+++ b/hotels.html
@@ -6,7 +6,7 @@
   <title>Sedona - Гостиницы</title>
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/min.css" rel="stylesheet">
-  <link href='https://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=latin,cyrillic" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -86,7 +86,7 @@
           </div>
           <div class="range-controls">
             <div class="scale">
-              <div style="width:80%;" class="bar"></div>
+              <div class="bar"></div>
               <div class="toggle min-toggle"></div>
               <div class="toggle max-toggle"></div>
             </div>
