--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Sedona - Главная</title>
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/min.css" rel="stylesheet">
-  <link href='https://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=latin,cyrillic' rel='stylesheet' type='text/css">
 
 <body>
   <div class="container">
