--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         Укажите предпологаемы даты поездки,
         <br> и мы покажем вам лучшие предложения гостиниц в Седоне
       </p>
-      <a href="#" class="btn-link btn-interesting">Поиск гостиницы в Седоне</a>
+      <a href="form.html" class="btn-link btn-interesting">Поиск гостиницы в Седоне</a>
     </div>
     <footer class="main-footer">
     <div class="index-map">
